--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -16,3 +16,8 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.box-shadow {
+  -webkit-box-shadow: 2px 2px 45px 0px rgba(92, 92, 92, 1);
+  -moz-box-shadow: 2px 2px 45px 0px rgba(92, 92, 92, 1);
+  box-shadow: 2px 2px 45px 0px rgba(92, 92, 92, 1);
+}
